2007-02-23  Martin Leidig  <mleidig@schlund.de>

	Fixed corrupted 304 response problem. 304 Responses for cached
	documents (the new ETag support) must not set a content-type that
	is handled by mod_deflate, because old mod_deflate versions have a bug 
	and gzip the 304 responses too, which causes non-empty response bodies,
	which in turn confuses browsers and leads to long loading times
	and broken documents (especially in conjunction with mod_ssl).

	* src/de/schlund/pfixxml/AbstractXMLServlet.java: Reset content type
	for 304 responses.

2007-02-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java: 
	* src/de/schlund/pfixxml/config/impl/ServletInfoRule.java: 
	* src/de/schlund/pfixxml/exceptionprocessor/UniversalExceptionProcessor.java: 
	* src/de/schlund/pfixxml/targets/TargetGenerator.java: 
	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
	* projects/core/build/create_webxml.xsl: 
	Made path to depend.xml available using a init-parameter. TargetGenerator can
	now lookup its name in projects.xml, if it is not specified in depend.xml.
	Removed deprecated xmlserver.depend.xml property from servlet configuration.
	XSD for servlet configuration has not been changed yet for compatibility
	reasons, so the depend attribute is still required by the schema. 

2007-02-22  Martin Leidig  <mleidig@schlund.de>

	Renamed JSON bean (de-)serialization annotations. As 'Transient'
	fits better in durability or persistence contexts, I decided to
	just call them @ExcludeByDefault, @Include and @Exclude, stating
	that they mark the properties to be included/excluded in a
	context independent way.

	* src/de/schlund/pfixcore/webservice/beans/Include.java
	* src/de/schlund/pfixcore/webservice/beans/BeanDescriptor.java
	* src/de/schlund/pfixcore/webservice/beans/Property.java
	* src/de/schlund/pfixcore/webservice/beans/Transient.java
	* src/de/schlund/pfixcore/webservice/beans/TransientByDefault.java